# drone-check

./: .gitattributes  .gitignore  CLAUDE.md  HARDWARE_TEST.md  README.md  pyproject.toml  readme.txt
bf-configd/: README.md
bf-configd/native/: README.md
bf-configd/patches/betaflight-4.5/: README.md
config/: bfcd_matrix.yaml  bfcd_msp_masks.yaml  firmware_allowlist.yaml  rules.yaml  settings.yaml
docs/: CONFIGURATOR.md
docs/bfcd/: architecture.md  compatibility.md  msp-command-matrix.md  testing.md
drone_check/: __init__.py  __main__.py  applog.py  capture.py  captures.py  cli_session.py  config.py  demo.py  firmware.py  flightcontroller.py  model.py  msp.py  orchestrator.py  parser.py  rules.py  serialwatch.py  server.py  sitl.py  storage.py  transport.py  vtx.py
drone_check/bfcd/: __init__.py  commands.py  compat.py  goldens.py  metadata.py  msp.py  probe.py  session.py
drone_check/web/: index.html  logs.html
scripts/: build_bfcd.sh  build_sitl.sh  install.ps1  install.sh  package_bfcd.sh  package_sitl.sh  update_allowlist.py
tests/: fakeserial.py  test_applog.py  test_bfcd_commands.py  test_bfcd_compat.py  test_bfcd_goldens.py  test_bfcd_metadata.py  test_bfcd_msp.py  test_bfcd_session.py  test_capture.py  test_captures.py  test_completeness.py  test_firmware.py  test_hardware_sim.py  test_parser.py  test_rules.py  test_serialwatch.py  test_server.py  test_sitl.py  test_storage.py  test_vtx.py
