[project]
name = "drone-check"
version = "0.1.0"
description = "Document firmware version and settings of a drone (Betaflight / INAV) and evaluate it against configurable rules."
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "cel-python>=0.1.5",
    # WebSocket proxy for the "view in Configurator" feature (SITL needs ws:// for
    # the 2025.12+ web Configurator). Optional at runtime: only used when starting
    # a SITL session.
    "websockify>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
drone-check = "drone_check.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["drone_check*"]

[tool.setuptools.package-data]
drone_check = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
